--- a/app/views/layouts/_tags.html.erb
+++ b/app/views/layouts/_tags.html.erb
@@ -1,12 +1,14 @@
-<table>
-  <% @tags.each do |t| %>
-  <tr>
-    <td class="name">
-      <%= link_to "#{t.name}", "#" %>
-    </td>
-    <td class="media_count">
-      <%= t.media_count %> media
-    </td>
-  </tr>
-  <% end %>
-</table>
+<div class="tags">
+  <table>
+    <% @tags.each do |t| %>
+    <tr class="tag">
+      <td class="name">
+        <%= link_to "#{t.name}", "#" %>
+      </td>
+      <td class="media_count">
+        <span class="count"><%= t.media_count %></span> media
+      </td>
+    </tr>
+    <% end %>
+  </table>
+</div>
