Fix partial variable names.

--- a/app/views/layouts/_media-grid-users.html.erb
+++ b/app/views/layouts/_media-grid-users.html.erb
@@ -1,5 +1,5 @@
 <ul class="media-grid users">
-  <% @users.each do |u| %>
+  <% users.each do |u| %>
   <li class="user">
     <a href="<%= recent_url(id: u.id) %>">
       <span class="profile_picture">
