--- a/app/views/layouts/_media-panel.html.erb
+++ b/app/views/layouts/_media-panel.html.erb
@@ -1,5 +1,5 @@
 <div class="modal-container">
-  <% @photos.each do |p| %>
+  <% photos.each do |p| %>
   <div class="modal media-panel hide" data-id="<%= p.id %>">
     <div class="modal-header user">
       <a href="#" class="close">×</a>
