--- a/app/views/layouts/_tags.html.erb
+++ b/app/views/layouts/_tags.html.erb
@@ -1,6 +1,6 @@
 <div class="tags">
   <table>
-    <% @tags.each do |t| %>
+    <% tags.each do |t| %>
     <tr class="tag">
       <td class="name">
         <%= link_to "#{t.name}", "#" %>
