--- a/app/views/layouts/_media-grid-photos.html.erb
+++ b/app/views/layouts/_media-grid-photos.html.erb
@@ -1,5 +1,5 @@
 <ul class="media-grid photos">
-  <% @photos.each do |p| %>
+  <% photos.each do |p| %>
   <li class="photo">
     <%= link_to_external (photo_tag p, :thumbnail), p.link, "data-id" => p.id %>
   </li>
