--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
             <% end %>
           </ul>
           <ul class="nav secondary-nav">
-            <li><a href="#">About</a></li>
+            <li><%= link_to "About", :about %></li>
           </ul>
         </div>
       </div>
