Add delete comment aciton.

--- a/app/views/layouts/_media-panel.html.erb
+++ b/app/views/layouts/_media-panel.html.erb
@@ -59,6 +59,11 @@
           <span class="text">
             <%= c.text %>
           </span>
+          <% if authenticated? && (c.from.id == session[:user][:id] || p.user.id == session[:user][:id]) %>
+          <span class="comments-button delete-comment">
+            <a href="<%= delete_comment_url(id: c.from.id, comment_id: c.id) %>" class="delete" data-remote="true" data-method="delete" data-confirm="Are you sure want to delete this comment?">×</a>
+          </span>
+          <% end %>
         </div>
         <% end %>
       </div>
