Add created time.

--- a/app/assets/stylesheets/undersky.css.scss
+++ b/app/assets/stylesheets/undersky.css.scss
@@ -54,6 +54,9 @@
         display: block;
       }
     }
+    .created_time {
+      color: gray;
+    }
   }
   &.create-comment {
     form textarea {
