--- a/app/views/layouts/_tags.html.erb
+++ b/app/views/layouts/_tags.html.erb
@@ -3,10 +3,12 @@
     <% tags.each do |t| %>
     <tr class="tag">
       <td class="name">
-        <%= link_to "#{t.name}", "#" %>
+        <%= link_to t.name, tags_url(name: t.name) %>
       </td>
       <td class="media_count">
-        <span class="count"><%= t.media_count %></span> media
+        <a href="<%= tags_url(name: t.name) %>">
+          <span class="count"><%= t.media_count %></span> media
+        </a>
       </td>
     </tr>
     <% end %>
