Move pretty_time helper method to core extension at lib.

--- a/app/views/layouts/_media-panel.html.erb
+++ b/app/views/layouts/_media-panel.html.erb
@@ -36,7 +36,7 @@
         <%= caption_text p %>
       </span>
       <span class="created_time">
-        <%= pretty_time p %>
+        <%= Time.at(p.created_time.to_i).to_pretty %>
       </span>
     </div>
     <% end %>
@@ -63,7 +63,7 @@
             <%= c.text %>
           </span>
           <span class="created_time">
-            <%= pretty_time c %>
+            <%= Time.at(c.created_time.to_i).to_pretty %>
           </span>
           <% if authenticated? && (c.from.id == session[:user][:id] || p.user.id == session[:user][:id]) %>
           <span class="comments-button delete-comment">
