Change design & texts.

--- a/app/views/layouts/_page-status.html.erb
+++ b/app/views/layouts/_page-status.html.erb
@@ -2,7 +2,7 @@
 <div class="page-status">
   <div class="page-button next-page">
     <a href="<%= url_for params.merge(key => @pagination['next_' + key]) %>" class="btn" data-remote="true">
-      next page
+      Load more...
     </a>
   </div>
 </div>
