--- a/app/views/relationships/followed_by.html.erb
+++ b/app/views/relationships/followed_by.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Followed By" %>
+<% content_for :title, "@#{@user.username} followers" %>
 <div class="container">
   <div class="page-header">
     <h1><%= yield :title %></h1>
