--- a/app/views/relationships/follows.html.erb
+++ b/app/views/relationships/follows.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Follows" %>
+<% content_for :title, "@#{@user.username} following" %>
 <div class="container">
   <div class="page-header">
     <h1><%= yield :title %></h1>
