--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,4 +1,8 @@
+<% if params[:name]  %>
+<% content_for :title, "Search: #{params[:name]}" %>
+<% else %>
 <% content_for :title, "Search" %>
+<% end %>
 <div class="container">
   <div class="page-header">
     <h1><%= yield :title %></h1>
