--- a/app/views/users/recent.html.erb
+++ b/app/views/users/recent.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Recent" %>
+<% content_for :title, "@#{@user.username}" %>
 <div class="container">
   <div class="page-header">
     <h1><%= yield :title %></h1>
