--- a/app/views/layouts/_user.html.erb
+++ b/app/views/layouts/_user.html.erb
@@ -3,7 +3,7 @@
     <%= link_to_external (image_tag user.profile_picture, size: "75x75"), user.profile_picture %>
   </div>
   <div class="full-name">
-    <h2><%= link_to user.full_name, recent_url(id: user.id) %></h2>
+    <h2><%= link_to emoji_tag(user.full_name), recent_url(id: user.id) %></h2>
   </div>
   <div class="username">
     @<%= link_to user.username, recent_url(id: user.id) %>
