--- a/app/views/layouts/_media-panel.html.erb
+++ b/app/views/layouts/_media-panel.html.erb
@@ -35,7 +35,7 @@
       <span class="text">
         <%= emoji_tag tags_tag caption_text p %>
       </span>
-      <span class="created_time">
+      <span class="created-time">
         <%= Time.at(p.created_time.to_i).to_pretty %>
       </span>
     </div>
