--- a/app/views/media/popular.html.erb
+++ b/app/views/media/popular.html.erb
@@ -8,6 +8,7 @@
       <%= render partial: "layouts/media-grid-photos", locals: {photos: @photos} %>
     </div>
     <div class="dashboard span6">
+      <%= render partial: "layouts/facebook-like-box" %>
     </div>
   </div>
 </div>
