--- a/app/views/error/not_found.html.erb
+++ b/app/views/error/not_found.html.erb
@@ -1,2 +1,10 @@
-<h1>Error#not_found</h1>
-<p>Find me in app/views/error/not_found.html.erb</p>
+<% content_for :title, "Not Found" %>
+<div class="container">
+  <div class="page-header">
+    <h1><%= yield :title %></h1>
+  </div>
+  <div class="page-body">
+    <h2>The page you were looking for doesn't exist.</h2>
+    <p>You may have mistyped the address or the page may have moved.</p>
+  </div>
+</div>
