--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -35,7 +35,7 @@
         <h2>Developer</h2>
       </div>
       <div class="span10">
-        <h3>Created & designd by</h3>
+        <h3>Created & designed by</h3>
         <dl>
           <dt>Kazuya Takeshima</dt>
           <dd>
