display icon in the comments

--- a/app/views/layouts/_media-panel.html.erb
+++ b/app/views/layouts/_media-panel.html.erb
@@ -29,14 +29,15 @@
     <% end %>
     <% if caption_text p %>
     <div class="modal-footer caption">
-      <span class="username author">
+      <%= image_tag p.user.profile_picture, class: "profile-picture" %>
+      <div class="username author">
         <%= link_to p.user.username, recent_url(id: p.user.id) %>
-      </span>
+      </div>
       <span class="text">
         <%= emoji_tag tags_tag caption_text p %>
-      </span>
-      <span class="created-time">
-        <%= Time.at(p.created_time.to_i).to_pretty %>
+        <span class="created-time">
+          <%= Time.at(p.created_time.to_i).to_pretty %>
+        </span>
       </span>
     </div>
     <% end %>
@@ -76,7 +77,12 @@
       <div class="likes-data">
         <% p.likes.data.each do |l| %>
         <span class="data-container" data-username="<%= l.username %>">
-          <span class="username"><%= link_to l.username, recent_url(id: l.id) %></span>, 
+          <div class="group">
+          <%= link_to recent_url(id: l.id) do %>
+            <%= image_tag l.profile_picture, class: "profile-picture"%>
+            <span class="username"><%= l.username %></span> 
+          <% end %>
+        </div>
         </span>
         <% end %>
       </div>
