--- a/app/views/layouts/_comment.html.erb
+++ b/app/views/layouts/_comment.html.erb
@@ -1,12 +1,13 @@
 <div class="comment">
+  <%= image_tag comment.from.profile_picture, class: "profile-picture" %>
   <span class="username" data-username="<%= comment.from.username %>">
     <%= link_to comment.from.username, recent_url(id: comment.from.id) %>
   </span>
   <span class="text">
     <%= emoji_tag tags_tag comment.text %>
-  </span>
-  <span class="created-time">
-    <%= Time.at(comment.created_time.to_i).to_pretty %>
+    <span class="created-time">
+      <%= Time.at(comment.created_time.to_i).to_pretty %>
+    </span>
   </span>
   <% if authenticated? && (mine?(comment.from.id) || (photo && mine?(photo.user.id))) %>
   <span class="comments-button delete-comment">
