--- a/app/assets/stylesheets/undersky.css.less
+++ b/app/assets/stylesheets/undersky.css.less
@@ -44,6 +44,7 @@
       background-color: @white;
     }
   }
+
   &.media-panel {
     width: 340px;
     top: 65px;
@@ -63,10 +64,45 @@
         display: block;
       }
     }
+    .comments-count {
+      margin-bottom: 12px;
+    }
+    .likes-count {
+      margin-bottom: 5px;
+    }
+    .profile-picture {
+      float: left;
+      .square(30px);
+      margin-right: 8px;
+      .border-radius(4px);
+    }
+    .text {
+      float: left;
+      width: 85%;
+      margin-bottom: 10px;
+    }
+    .likes-data .group {
+      position: relative;
+      float: left;
+      width: 50px;
+      line-height: 16px;
+      overflow: hidden;
+      margin-top: 5px;
+      margin-left: 1em;
+      font-size: .625em;
+      text-align: center;
+      .profile-picture {
+        .square(50px);
+      }
+    }
   }
+
   &.create-comment {
     form textarea {
       width: 520px;
+    }
+    .profile-picture {
+      display: none;
     }
   }
 }
@@ -137,52 +173,3 @@
     text-decoration: none;
   }
 }
-
-.media-panel{
-  .comments-count {
-    margin-bottom: 12px;
-  }
-
-  .likes-count {
-    margin-bottom: 5px;
-  }
-
-  .profile-picture {
-    height: 30px;
-    width: 30px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    float: left;
-    margin-right: 8px;
-  }
-
-  .text {
-    width: 85%;
-    float: left;
-    margin-bottom: 10px;
-  }
-
-  .likes-data .group {
-    font-size: .625em;
-    position: relative;
-    margin-top: 5px;
-    width: 50px;
-    text-align: center;
-    float: left;
-    margin-left: 1em;
-    overflow: hidden;
-    line-height: 16px;
-    .profile-picture {
-      width: 50px;
-      height: 50px;
-    }
-  }
-}
-
-.create-comment{
-  .profile-picture {
-    display: none;
-  }
-}
-
