Add scroll down/up panel keyboard shortcut.

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -22,6 +22,8 @@
         <ul class="unstyled">
           <li><strong>j/→:</strong> next item</li>
           <li><strong>k/←:</strong> previous item</li>
+          <li><strong>n:</strong> scroll down panel</li>
+          <li><strong>p:</strong> scroll up panel</li>
         </ul>
         <h3>Acting on item</h3>
         <ul class="unstyled">
