Mapping the user name and id.

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -46,7 +46,7 @@
           </dd>
           <dd>
             <string>Instagram:</string>
-            <a href="/users/982876" rel="external nofollow" target="_blank">@mitukiii</a>
+            <a href="/users/mitukiii" rel="external nofollow" target="_blank">@mitukiii</a>
           </dd>
           <dd>
             <string>Twitter:</string>
