--- a/app/views/layouts/_comment.html.erb
+++ b/app/views/layouts/_comment.html.erb
@@ -1,7 +1,7 @@
 <div class="comment">
   <%= image_tag comment.from.profile_picture, class: "profile-picture" %>
   <span class="username" data-username="<%= comment.from.username %>">
-    <%= link_to comment.from.username, recent_url(id: comment.from.id) %>
+    <%= link_to comment.from.username, recent_url(id: comment.from.username) %>
   </span>
   <span class="text">
     <%= emoji_tag tags_tag comment.text.strip %>
