--- a/app/views/layouts/_media-grid-users.html.erb
+++ b/app/views/layouts/_media-grid-users.html.erb
@@ -1,7 +1,7 @@
 <ul class="media-grid users">
   <% users.each do |u| %>
   <li class="user">
-    <a href="<%= recent_url(id: u.id) %>">
+    <a href="<%= recent_url(id: u.username) %>">
       <span class="profile_picture">
       <%= image_tag u.profile_picture, size: "150x150" %>
       </span>
