--- a/app/views/layouts/_user.html.erb
+++ b/app/views/layouts/_user.html.erb
@@ -4,11 +4,11 @@
   </div>
   <% if user.full_name.present? %>
   <div class="full-name">
-    <h2><%= link_to emoji_tag(user.full_name), recent_url(id: user.id) %></h2>
+    <h2><%= link_to emoji_tag(user.full_name), recent_url(id: user.username) %></h2>
   </div>
   <% end %>
   <div class="username">
-    @<%= link_to user.username, recent_url(id: user.id) %>
+    @<%= link_to user.username, recent_url(id: user.username) %>
   </div>
   <div class="bio">
     <%= emoji_tag tags_tag user.bio %>
@@ -25,12 +25,12 @@
     </div>
     <div class="outgoing-status <%= @relationship.outgoing_status %>">
       <div class="relationships-button follow">
-        <a href="<%= follow_url(id: user.id) %>" class="btn primary" data-remote="true" data-method="post">
+        <a href="<%= follow_url(id: user.username) %>" class="btn primary" data-remote="true" data-method="post">
           Follow
         </a>
       </div>
       <div class="relationships-button unfollow">
-        <a href="<%= unfollow_url(id: user.id) %>" class="btn success" data-remote="true" data-method="delete">
+        <a href="<%= unfollow_url(id: user.username) %>" class="btn success" data-remote="true" data-method="delete">
           Following
         </a>
       </div>
@@ -39,17 +39,17 @@
   <hr />
   <% end %>
   <div class="media">
-    <a href="<%= recent_url(id: user.id) %>">
+    <a href="<%= recent_url(id: user.username) %>">
       <span class="count"><%= user.counts.media %></span> photos
     </a>
   </div>
   <div class="follows">
-    <a href="<%= follows_url(id: user.id) %>">
+    <a href="<%= follows_url(id: user.username) %>">
       <span class="count"><%= user.counts.follows %></span> following
     </a>
   </div>
   <div class="followed_by">
-    <a href="<%= followed_by_url(id: user.id) %>">
+    <a href="<%= followed_by_url(id: user.username) %>">
       <span class="count"><%= user.counts.followed_by %></span> followers
     </a>
   </div>
