--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Undersky - <%= yield :title %></title>
-    <%= favicon_link_tag "favicon.ico" %>
+    <link href="/favicon.ico" rel="shortcut icon" />
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
